# Space-Survival-Game

./: .gitignore  .gitmodules  CMakeLists.txt  Generate_VS2017_Project.bat  Generate_VS2019_Project.bat  Generate_VS2022_Project.bat  README.md  premake5.lua
AllocatorTest/: CMakeLists.txt
AllocatorTest/src/: main.cpp
Editor/: CMakeLists.txt
Editor/include/: Box.h
Editor/src/: Box.cpp  Editor.cpp
Engine/: CMakeLists.txt
Engine/include/: Application.h  BasicHeapAllocator.h  Camera.h  CameraFunctionLibrary.h  CommonTypedefs.h  Core.h  DebugVisualizerTerrainOctree.h  DefaultAllocator.h  Frustum.h  Gizmos.h  IAllocator.h  ITerrainGraphicsAPIAdaptor.h  ITerrainOctree.h  ITerrainOctreeNode.h  ITerrainPolygonizer.h  ITerrainVoxelPopulator.h  ITerrainVoxelVolume.h  IVoxelDataSource.h  OctreeFunctionLibrary.h  OctreeSerialisationLibrary.h  OctreeTypes.h  Plane.h  ScopeTimer.h  Shader.h  SparseTerrainVoxelOctree.h  TerrainDefs.h  TerrainLODSelectionAndCullingAlgorithm.h  TerrainLight.h  TerrainMaterial.h  TerrainOctree.h  TerrainOpenGLAdaptor.h  TerrainPolygonizer.h  TerrainRenderer.h  TerrainVoxelVolume.h  TestProceduralTerrainVoxelPopulator.h  ThreadPool.h  Transvoxel.h
Engine/include/Component/: Component.h
Engine/include/Components/: Component.h  TransformComponent.h
Engine/include/Entity/: Entity.h
Engine/include/Objects/: Object.h
Engine/src/: Application.cpp  BasicHeapAllocator.cpp  CameraFunctionLibrary.cpp  DebugVisualizerTerrainOctree.cpp  DefaultAllocator.cpp  Gizmos.cpp  OctreeFunctionLibrary.cpp  OctreeSerialisationLibrary.cpp  ScopeTimer.cpp  SparseTerrainVoxelOctree.cpp  TerrainLODSelectionAndCullingAlgorithm.cpp  TerrainOctree.cpp  TerrainOpenGLAdaptor.cpp  TerrainPolygonizer.cpp  TerrainRenderer.cpp  TerrainVoxelVolume.cpp  TestProceduralTerrainVoxelPopulator.cpp  ThreadPool.cpp  Transvoxel.cpp
Engine/src/Component/: Component.cpp
Engine/src/Components/: Component.cpp  TransformComponent.cpp
Engine/src/Entity/: Entity.cpp
Engine/src/Objects/: Object.cpp
Game/: CMakeLists.txt  imgui.ini  test.vox
Game/src/: Game.cpp
TerrainTest/FailedTestSeedValues/: RandomStoreAndRetrieve10000Times.txt
TerrainTest/include/: Mocks.cpp  Mocks.h  SparseVoxelOctreeTestHelpers.h
TerrainTest/src/: SparseVoxelOctreeTest.cpp  SparseVoxelOctreeTestHelpers.cpp  main.cpp
VoxelVolumeTest/src/: main.cpp
